--- a/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
+++ b/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
@@ -1,9 +1,11 @@
 <h1 mat-dialog-title>Menu {{data.dateStr}}</h1> 
 <button mat-stroked-button color="primary" (click)="handleSaveButton()">Register</button>
+
 <div class="containerDialog">
   <div class="col-12 columnUsers">
     <mat-card *ngFor="let user of UserListPerDay">
       {{user.first_name + " " + user.last_name}}
+      <button mat-button color="primary"><fa-icon [icon]="faTimes" ></fa-icon></button>
     </mat-card>
   </div>
 </div>
