--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -1,3 +1,8 @@
-<div class="calendar">
-    <full-calendar [options]="options"></full-calendar>
-</div>
+<!-- <div class="cont"> -->
+    <!-- <div class="profile">
+        <app-perfil></app-perfil>
+    </div> -->
+    <div class="calendar">
+        <full-calendar [options]="options"></full-calendar>
+    </div>
+<!-- </div> -->
