--- a/desayunos-arkus/src/app/components/perfil/perfil.component.scss
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.scss
@@ -31,6 +31,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
+  background-color: transparent;
 }
 
 .example-sidenav-content {
@@ -38,6 +39,7 @@
   height: 100%;
   align-items: flex-start;
   justify-content: flex-end;
+  
 }
 //Dise;o del Menu
 .menuH {
