--- a/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.scss
+++ b/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.scss
@@ -1,3 +1,16 @@
+.mat-card{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-height: 60px;
+}
+.mat-button{
+    margin-bottom: 5px;
+}
+.title{
+    display: flex;
+    justify-content: space-between;
+}
 .containerDialog{
     display: flex;
 }
