--- a/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
+++ b/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
@@ -1,3 +1,7 @@
+<mat-toolbar>
+    <img class="logo" src="assets/img/logoArkus.png" width="400" height="70">
+  </mat-toolbar>
+
 <mat-tab-group>
   <mat-tab label="Inicio de Sesión">
       <form [formGroup]="fLogin" (submit)="sendLogin()">
