--- a/desayunos-arkus/src/app/components/login-registro/login-registro.component.scss
+++ b/desayunos-arkus/src/app/components/login-registro/login-registro.component.scss
@@ -6,4 +6,10 @@
 }
 .mat-raised-button{
     margin-left: 50px;
+    background-color: #b71c1c;
+}
+.mat-toolbar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
