--- a/desayunos-arkus/src/app/components/home/home.component.scss
+++ b/desayunos-arkus/src/app/components/home/home.component.scss
@@ -1,3 +1,14 @@
 .calendar{
     height: 100%;
 }
+.fc{
+    position: relative;
+    padding: 1em;
+    // padding-top: 2em;
+    height: 100%;
+    // width: 95%;
+    // z-index: -1;
+}
+.fc-toolbar-title{
+    padding-right: 5rem;
+}
