--- a/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
+++ b/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
@@ -79,10 +79,10 @@
               </mat-form-field>
           </div>
           
-          <button mat-raised-button color="primary" type="submit" [disabled]="fRegister.invalid">Registrarme</button>
+          <button mat-raised-button color="primary" type="submit"  [disabled]="fRegister.invalid" >Registrarme</button>
 
       </form>
   </mat-tab>
 </mat-tab-group>
-<div>Valido: {{fLogin.valid | json}} </div>
-<div>Valido: {{fRegister.valid | json}} </div>
+<!-- <div>Valido: {{fLogin.valid | json}} </div>
+<div>Valido: {{fRegister.valid | json}} </div> -->
