--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -1,8 +1,9 @@
 <!-- <div class="cont"> -->
-    <!-- <div class="profile">
+<!-- <div class="profile">
         <app-perfil></app-perfil>
     </div> -->
-    <div class="calendar">
-        <full-calendar [options]="options"></full-calendar>
-    </div>
+<app-perfil></app-perfil>
+<div class="calendar">
+    <full-calendar [options]="options"></full-calendar>
+</div>
 <!-- </div> -->
