WIP: vista de lista de usuarios

--- a/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
+++ b/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
@@ -22,7 +22,8 @@
                 </mat-form-field>
             </div>
 
-            <button mat-raised-button color="primary" [disabled]="fLogin.invalid">Ingresar</button>
+            <button  [swal] = " ['¡Ups!', 'Esto aún no está implementado: /', 'advertencia'] " 
+                 mat-raised-button color="primary" [disabled]="fLogin.invalid">Ingresar</button>
         </form>
     </mat-tab>
 
