--- a/desayunos-arkus/src/app/components/vista-de-usuario/vista-de-usuario.component.html
+++ b/desayunos-arkus/src/app/components/vista-de-usuario/vista-de-usuario.component.html
@@ -10,7 +10,7 @@
       </div>
 
       <mat-form-field appearance="fill">
-        <mat-label>Roles</mat-label>
+        <mat-label class="roles">Roles</mat-label>
         <select matNativeControl required>
           <option value="2">Colaborador</option>
           <option value="1">Admi</option>
