--- a/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
+++ b/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
@@ -3,10 +3,44 @@
   <button mat-stroked-button color="primary" (click)="handleSaveButton()" *ngIf="ActDi < inputDate">Register</button>
 </div>
 <div class="containerDialog">
-  <div class="col-12 columnUsers">
-    <mat-card *ngFor="let user of UserListPerDay">
-      {{user.first_name + " " + user.last_name}}
-      <button mat-button color="primary" (click)="handleDeleteUser(user.id_user)" >
+  <div class="columnUsers">
+    <mat-card>
+      <div class="userInfo">
+        <!-- *ngFor="let user of UserListPerDay" -->
+        <fa-icon [icon]="faUser" id="faicon"></fa-icon>
+        <p id="username">Angel Servando Quinones Garcia</p>
+      </div>
+      <!-- {{user.first_name + " " + user.last_name}} -->
+      <button mat-button color="primary">
+        <!-- (click)="handleDeleteUser(user.id_user)" -->
+        <fa-icon [icon]="faTimes"></fa-icon>
+      </button>
+    </mat-card>
+  </div>
+  <div class="columnUsers">
+    <mat-card>
+      <div class="userInfo">
+        <!-- *ngFor="let user of UserListPerDay" -->
+        <fa-icon [icon]="faUser" id="faicon"></fa-icon>
+        <p id="username">Doña María del Rosario Cayetana Fitz-James Stuart y de Silva</p>
+      </div>
+      <!-- {{user.first_name + " " + user.last_name}} -->
+      <button mat-button color="primary">
+        <!-- (click)="handleDeleteUser(user.id_user)" -->
+        <fa-icon [icon]="faTimes"></fa-icon>
+      </button>
+    </mat-card>
+  </div>
+  <div class="columnUsers">
+    <mat-card>
+      <div class="userInfo">
+        <!-- *ngFor="let user of UserListPerDay" -->
+        <fa-icon [icon]="faUser" id="faicon"></fa-icon>
+        <p id="username">Angel Servando Quinones Garcia</p>
+      </div>
+      <!-- {{user.first_name + " " + user.last_name}} -->
+      <button mat-button color="primary">
+        <!-- (click)="handleDeleteUser(user.id_user)" -->
         <fa-icon [icon]="faTimes"></fa-icon>
       </button>
     </mat-card>
