--- a/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.scss
+++ b/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.scss
@@ -1,36 +1,77 @@
-.mat-card{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-height: 60px;
-}
-.mat-button{
-    margin-bottom: 5px;
-}
+// .mat-card{
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     max-height: 60px;
+// }
+// .mat-button{
+//     margin-bottom: 5px;
+// }
 .title{
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    max-height: 50px;
+    justify-items: start;
+    button{
+        justify-self: end;
+    }
 }
 .containerDialog{
-    display: flex;
-}
-.columnUsers {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-.deleteIcon {
-    padding-left: 5px;
+    // border: solid 1px black;
+    display: grid;
+    margin-top: 5px;
+    
 }
 .mat-card{
-    margin-top: 1px;
-    margin-bottom: 1px;
+    border: solid 1px black;
+    display: grid;
+    grid-template-columns: 85% 15%;
+    align-items: center;
+    margin-top: 5px;
+    button {
+        // border: solid 1px blue;
+        justify-self: end;
+    }
 }
-button{
-    margin-bottom: 1rem;
+.columnUsers{
+    // border: solid 5px pink;
+    display: grid;
 }
-h1{
-    margin-bottom: 0rem;
+.userInfo{
+    // border: solid 1px red;
+    display: grid;
+    grid-template-columns: 5% 95%;
+    justify-items: start;
+    align-items: center;
+    #faicon{
+        margin-left: 5px;
+        margin-right: 5px;
+        font-size: 25px;
+    }
+    p {
+        margin: 0;
+        position: relative;
+        left: 5px;
+    }
 }
-.columnUsers button{
-    align-content: center;
-}
+
+// .columnUsers {
+//     padding-left: 10px;
+//     padding-right: 10px;
+// }
+// .deleteIcon {
+//     padding-left: 5px;
+// }
+// .mat-card{
+//     margin-top: 1px;
+//     margin-bottom: 1px;
+// }
+// button{
+//     margin-bottom: 1rem;
+// }
+// h1{
+//     margin-bottom: 0rem;
+// }
+// .columnUsers button{
+//     align-content: center;
+// }
