Se modificaron los archivos para apuntar a los servers de produccion de API y se añadiron llamadas de la funcion para mantener la sesion dentro de los archivos de perfil, home y login registro

--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -15,13 +15,6 @@
       <div class="perfil">{{firstchar}}</div>
     </div>
 
-    <!-- prueba -->
-    <!-- <div [id]="fadeinout">
-      <p>
-        Texto Fade In y OUT
-      </p>
-    </div> -->
-
     <form action="" [formGroup]="perfilForm" (ngSubmit)="onSubmit()">
 
       <div class="Firstlast" disabled>
@@ -68,7 +61,7 @@
         <button mat-raised-button color="primary" type="submit" (click)="buttonD()">Edit</button>
       </div>
       <div class="cerraSe">
-        <a href="#" >Sign Out</a>
+        <a href="" (click)="cerrarSesion()">Sign Out</a>
       </div>
     </form>
   </mat-drawer>
