Changes for showing users in calendar

--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -4,6 +4,7 @@
     </div> -->
 <app-perfil></app-perfil>
 <div class="calendar">
-    <full-calendar [options]="options"></full-calendar>
+    <full-calendar *ngIf="!isLoading" [options]="options" #calendar></full-calendar>
 </div>
+<!--<img src="../../../assets/img/avatar.jpg">-->
 <!-- </div> -->
