Modificaciones a Dialog-Menu
Se agregó el botón para eliminar usuarios si eres Admin, que el colaborador no elimine a otros usuarios, confirmación de eliminación

--- a/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
+++ b/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
@@ -9,7 +9,7 @@
         <fa-icon [icon]="faUser" id="faicon"></fa-icon>
         <p id="username">{{user.first_name + " " + user.last_name}}</p>
       </div>
-      <button mat-button color="primary" (click)="handleDeleteUser(user.id_user)">
+      <button mat-button *ngIf="isAdmin || user.id_user=== isUser && ActDi < inputDate"  color="primary" (click)="handleDeleteUser(user.id_user)">
         <fa-icon [icon]="faTimes"></fa-icon>
       </button>
     </mat-card>
