Ya se modifico el perfil y login-registro

--- a/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
+++ b/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
@@ -1,6 +1,6 @@
 <div class="loginContainer">
   <mat-toolbar>
-    <img src="https://uploads-ssl.webflow.com/5e589a8b7bb9af87ad968338/613c50e0018116747c3bc5bc_ArkusNexus_MainLogo.svg"
+    <img class="logTam" src="https://uploads-ssl.webflow.com/5e589a8b7bb9af87ad968338/613c50e0018116747c3bc5bc_ArkusNexus_MainLogo.svg"
       width="400" height="70" />
   </mat-toolbar>
   <div class="containerTabgroup">
