--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -1,4 +1,5 @@
 <mat-drawer-container class="nav-container" autosize>
+  
   <mat-drawer #drawer class="example-sidenav" mode="over" position="end" style="position: absolute;">
     <div class="menuH">
       <button (click)="drawer.toggle()">
@@ -15,7 +16,7 @@
       <div class="perfil">{{firstchar}}</div>
     </div>
 
-    <form action="" [formGroup]="perfilForm" (ngSubmit)="onSubmit()">
+    <form class="Acomodar" action="" [formGroup]="perfilForm" (ngSubmit)="onSubmit()">
 
       <div class="Firstlast" disabled>
         <mat-form-field appearance="outline">
@@ -65,6 +66,7 @@
       </div>
     </form>
   </mat-drawer>
+
 </mat-drawer-container>
 <div class="menuH">
   <button (click)="drawer.toggle()">
