--- a/desayunos-arkus/src/app/components/perfil/perfil.component.scss
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.scss
@@ -16,7 +16,7 @@
 .perfil {
   width: 10rem;
   height: 10rem;
-
+  margin-top: 25px;
   border-radius: 50%;
   background: red;
   display: flex;
@@ -77,10 +77,51 @@
   fill: red;
 }
 
-.example-sidenav {
-  padding: 90px;
-  width: 25%;
+.Acomodar{
+  padding-left: 20%;
+  width: 80%;
 }
+  
+
+@media (max-width: 2000px) {
+  .example-sidenav {
+    
+    width: 25%;
+}
+}
+@media (max-width: 1400px) {
+  .example-sidenav {
+    float: none;
+    width: 40%;
+}
+}
+@media (max-width: 950px ) {
+  .example-sidenav {
+    float: none;
+    width: 50%;
+}
+}
+@media (max-width: 700px ) {
+  .example-sidenav {
+    float: none;
+    width: 60%;
+}
+}
+@media (max-width: 500px ) {
+  .example-sidenav {
+    float: none;
+    width: 80%;
+}
+}
+@media (max-width: 400px ) {
+  .example-sidenav {
+    float: none;
+    width: 100%;
+}
+}
+
+
+
 
 //Separacion De Botones Del Perfil
 .EnvEdi {
