Se agrego la vista de usuario

--- a/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
+++ b/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
@@ -22,7 +22,7 @@
                 </mat-form-field>
             </div>
 
-            <button  [swal] = " ['¡Ups!', 'Esto aún no está implementado: /', 'advertencia'] " 
+            <button
                  mat-raised-button color="primary" [disabled]="fLogin.invalid">Ingresar</button>
         </form>
     </mat-tab>
