Ajuste icono contraseña y comparación password

--- a/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
+++ b/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
@@ -84,7 +84,7 @@
             </mat-form-field>
             <mat-form-field class="texbx" appearance="outline" color="accent">
               <mat-label>Contraseña</mat-label>
-              <input matInput type="password" formControlName="registerPassword" />
+              <input matInput [type]="hide ? 'password' : 'text'" formControlName="registerPassword" />
               <button type= "button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
@@ -94,13 +94,14 @@
             </mat-form-field>
             <mat-form-field class="texbx" appearance="outline" color="accent">
               <mat-label>Confirmar Contraseña</mat-label>
-              <input matInput type="password" formControlName="confirmPassword" />
+              <input matInput [type]="hide ? 'password' : 'text'" formControlName="confirmPassword" />
               <button type= "button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
               <mat-error *ngIf="confirmPassword.invalid">{{
                 confirmPasswordErrorMessage()
                 }}</mat-error>
+              <mat-error *ngIf="confirmPassword.errors.mustMatch">Las contraseñas deben coincidir</mat-error>
             </mat-form-field>
             <!-- ACABA INPUTS de dob, location, email y contraseñas -->
             <button mat-raised-button color="primary" type="submit" [disabled]="fRegister.invalid">Registrarme</button>
