--- a/desayunos-arkus/src/app/components/login-registro/login-registro.component.scss
+++ b/desayunos-arkus/src/app/components/login-registro/login-registro.component.scss
@@ -8,6 +8,7 @@
     .containerTabgroup{
         grid-column-start: 2;
         margin-top: 7rem;
+        margin-bottom: 30px;
         .mat-tab-group {
             grid-column-start: 2;
             place-items: center;
@@ -33,6 +34,7 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 10px;
+            margin-bottom: 5px;
         }
     }
 }
