Cambios mayores a la pantalla de la vista de usuarios

--- a/desayunos-arkus/src/app/components/vista-de-usuario/vista-de-usuario.component.html
+++ b/desayunos-arkus/src/app/components/vista-de-usuario/vista-de-usuario.component.html
@@ -1,55 +1,35 @@
-<div class="item">
-<div class="containerDialog">
-    <div class="col-12 columnUsers">
-        <fa-icon [icon]="faSave" class="faicon"></fa-icon>
-        <fa-icon [icon]="faTimes" class="faicon"></fa-icon>
-
-        <!-- <img src="https://img.icons8.com/ios-glyphs/30/000000/save--v1.png"/>
-         <img src="https://img.icons8.com/material-two-tone/24/000000/delete-sign.png"/> -->
+<div class="usersview">
+    <div class="header">
+        <img src="https://uploads-ssl.webflow.com/5e589a8b7bb9af87ad968338/613c50e0018116747c3bc5bc_ArkusNexus_MainLogo.svg"
+            width="400" height="70">
     </div>
-</div>
-<div class="containerDialog">
-    <div class="col-12 columnUsers">
-        <mat-card>
-            <div mat-card-avatar class="example-header-image">
-                <p>Liliana Medina</p>
+    
+        <div class="containerDialog">
+            <div class="col-12 columnUsers">
+                <fa-icon [icon]="faSave" class="faicon" ></fa-icon><!--(click)=""-->
+                <fa-icon [icon]="faTimes" class="faicon" ></fa-icon><!--(click)=""-->
             </div>
-            <div class="un">
+        </div>
+    <!-- <div class="user"> -->
+        <mat-card for="deleteuser">
+            <div class="userIdentifier">
+                <fa-icon [icon]="faUserCircle" class="userimg"></fa-icon>
+                <p class="username">Liliana Medina</p>
+            </div>
+            <div class="roles">
                 <mat-form-field appearance="fill">
                     <mat-label>Roles</mat-label>
-                    <select matNativeControl required>
-                        <option value="2">Colaborador</option>
-                        <option value="1">Admi</option>
-                    </select>
+                    <mat-select matNativeControl>
+                        <mat-option value="2">Colaborador</mat-option>
+                        <mat-option value="1">Admin</mat-option>
+                    </mat-select>
                 </mat-form-field>
             </div>
             <!-- {{user.first_name + " " + user.last_name}} -->
-            <div class="chec">
-                <input type="checkbox" name="" id="">
+            <div class="delete">
+                <p>Eliminar usuario?</p>
+                <input type="checkbox" name="" id="deleteuser">
             </div>
         </mat-card>
-    </div>
-</div>
-<div class="containerDialog">
-    <div class="col-12 columnUsers">
-        <mat-card>
-            <div mat-card-avatar class="example-header-image">
-                <p>Liliana Medina</p>
-            </div>
-            <div class="un">
-                <mat-form-field appearance="fill">
-                    <mat-label>Roles</mat-label>
-                    <select matNativeControl required>
-                        <option value="2">Colaborador</option>
-                        <option value="1">Admi</option>
-                    </select>
-                </mat-form-field>
-            </div>
-            <!-- {{user.first_name + " " + user.last_name}} -->
-            <div class="chec">
-                <input type="checkbox" name="" id="">
-            </div>
-        </mat-card>
-    </div>
-</div>
+    <!-- </div> -->
 </div>
