Bug de recarga en el calendario solucionado
El bug venia del cambio de la forma en la que se estaba guardando la
informacion del usuario dentro de la cookie

--- a/desayunos-arkus/src/app/components/home/home.component.scss
+++ b/desayunos-arkus/src/app/components/home/home.component.scss
@@ -1,12 +1,18 @@
-.calendar{
+.calendar {
     height: 100%;
 }
-.fc{
+.fc {
     // position: relative;
     padding: 1em;
     height: 100%;
     // padding-right: 2em;
 }
-.fc .fc-toolbar.fc-header-toolbar{
-    padding-right: 2em;
+.calendar .fc table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    font-size: 40em; /* normalize cross-browser */
+}
+
+.fc th {
+    text-align: right;
 }
